# refrigerant-optimization-chemours

./: .gitignore  DEVELOPMENT_REPORT.md  README.md  pyproject.toml  report.md
examples/: scenario1.yaml  scenario3.yaml
src/: __init__.py  cli.py  data.py  model.py
tests/: conftest.py  test_model.py
